--- a/plc/2/8/d517482997735e6418446425182.html
+++ b/plc/2/8/d517482997735e6418446425182.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-17.58111111, 146.01413889);
+  var myLatLng = new google.maps.LatLng(-32.91365200, 151.78296200);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">17°34'52.00"S</td>
+						<td class="ColumnValue">-32.913652</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">146°00'50.90"E</td>
+						<td class="ColumnValue">151.782962</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">City</td>
