--- a/plc/2/9/d44bfa09bc05a2b512d506f3792.html
+++ b/plc/2/9/d44bfa09bc05a2b512d506f3792.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-34.75155000, 149.72086111);
+  var myLatLng = new google.maps.LatLng(-36.36035300, 145.38053000);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">34°45'05.58"S</td>
+						<td class="ColumnValue">-36.360353</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">149°43'15.10"E</td>
+						<td class="ColumnValue">145.380530</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Locality</td>
