--- a/plc/2/c/d44b964b7d06f9ead7f2420dc2.html
+++ b/plc/2/c/d44b964b7d06f9ead7f2420dc2.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-35.98731944, 145.92341111);
+  var myLatLng = new google.maps.LatLng(-33.96719600, 151.13716800);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">35°59'14.35"S</td>
+						<td class="ColumnValue">-33.967196</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">145°55'24.28"E</td>
+						<td class="ColumnValue">151.137168</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Locality</td>
