--- a/plc/3/1/d4a9e9238921c69594f95f6dd13.html
+++ b/plc/3/1/d4a9e9238921c69594f95f6dd13.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-35.31696111, 138.74736944);
+  var myLatLng = new google.maps.LatLng(-35.98295700, 146.38105000);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">35°19'01.06"S</td>
+						<td class="ColumnValue">-35.982957</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">138°44'50.53"E</td>
+						<td class="ColumnValue">146.381050</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">State/ Province</td>
