--- a/plc/3/3/d5174504e41b3ae6760aaa933.html
+++ b/plc/3/3/d5174504e41b3ae6760aaa933.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-30.97603889, 151.57878889);
+  var myLatLng = new google.maps.LatLng(-32.17492300, 152.49752900);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">30°58'33.74"S</td>
+						<td class="ColumnValue">-32.174923</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">151°34'43.64"E</td>
+						<td class="ColumnValue">152.497529</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">State/ Province</td>
