--- a/plc/3/9/d4af069a012779fac3a50438c93.html
+++ b/plc/3/9/d4af069a012779fac3a50438c93.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-43.02343889, 147.71835000);
+  var myLatLng = new google.maps.LatLng(-37.79198500, 144.90495700);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">43°01'24.38"S</td>
+						<td class="ColumnValue">-37.791985</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">147°43'06.06"E</td>
+						<td class="ColumnValue">144.904957</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Locality</td>
