--- a/plc/3/d/d4a9e64ab691cc2a7c8bf436fd3.html
+++ b/plc/3/d/d4a9e64ab691cc2a7c8bf436fd3.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-23.64598889, 148.42806944);
+  var myLatLng = new google.maps.LatLng(-34.92412000, 138.64535000);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">23°38'45.56"S</td>
+						<td class="ColumnValue">-34.924120</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">148°25'41.05"E</td>
+						<td class="ColumnValue">138.645350</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">State/ Province</td>
