--- a/plc/4/7/d44bfe7a8aa1a3cede8e596674.html
+++ b/plc/4/7/d44bfe7a8aa1a3cede8e596674.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-29.93973889, 151.23715000);
+  var myLatLng = new google.maps.LatLng(-37.75783900, 145.34913200);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">29°56'23.06"S</td>
+						<td class="ColumnValue">-37.757839</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">151°14'13.74"E</td>
+						<td class="ColumnValue">145.349132</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">State/ Province</td>
