--- a/plc/4/c/d5fd4c387ee4818944fd5e6dac4.html
+++ b/plc/4/c/d5fd4c387ee4818944fd5e6dac4.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(54.05138889, -7.85361111);
+  var myLatLng = new google.maps.LatLng(53.80203600, -9.51547000);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">54°03'05.00"N</td>
+						<td class="ColumnValue">53.802036</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">7°51'13.00"W</td>
+						<td class="ColumnValue">-9.515470</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">County</td>
