--- a/plc/4/e/d44bf8c04086efe700d1a8f7e4.html
+++ b/plc/4/e/d44bf8c04086efe700d1a8f7e4.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-34.75758056, 149.30711111);
+  var myLatLng = new google.maps.LatLng(-37.80191000, 144.98823600);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">34°45'27.29"S</td>
+						<td class="ColumnValue">-37.801910</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">149°18'25.60"E</td>
+						<td class="ColumnValue">144.988236</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">State/ Province</td>
