--- a/plc/5/e/d44bfbeeeb844d7f5b6f3cc7ae5.html
+++ b/plc/5/e/d44bfbeeeb844d7f5b6f3cc7ae5.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-32.55671944, 138.44853056);
+  var myLatLng = new google.maps.LatLng(-37.30136300, 144.94990500);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">32°33'24.19"S</td>
+						<td class="ColumnValue">-37.301363</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">138°26'54.71"E</td>
+						<td class="ColumnValue">144.949905</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">State/ Province</td>
