--- a/plc/6/1/d44bfff2cb47a5a54e05c6f2916.html
+++ b/plc/6/1/d44bfff2cb47a5a54e05c6f2916.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-35.08343889, 138.53556111);
+  var myLatLng = new google.maps.LatLng(-37.36121200, 144.52620200);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">35°05'00.38"S</td>
+						<td class="ColumnValue">-37.361212</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">138°32'08.02"E</td>
+						<td class="ColumnValue">144.526202</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">State/ Province</td>
