--- a/plc/6/8/d44bcb29be075cf28da6bf06d86.html
+++ b/plc/6/8/d44bcb29be075cf28da6bf06d86.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-34.87118889, 137.51328056);
+  var myLatLng = new google.maps.LatLng(52.95603100, -7.79847000);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">34°52'16.28"S</td>
+						<td class="ColumnValue">52.956031</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">137°30'47.81"E</td>
+						<td class="ColumnValue">-7.798470</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">County</td>
