--- a/plc/6/8/d44c7cb340830ddf355f1b99086.html
+++ b/plc/6/8/d44c7cb340830ddf355f1b99086.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(53.70130000, -1.63876111);
+  var myLatLng = new google.maps.LatLng(53.72601700, -1.63619500);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">53°42'04.68"N</td>
+						<td class="ColumnValue">53.726017</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">1°38'19.54"W</td>
+						<td class="ColumnValue">-1.636195</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">County</td>
