--- a/plc/6/f/d44bc77ca50288666c92dc592f6.html
+++ b/plc/6/f/d44bc77ca50288666c92dc592f6.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-18.77376944, 131.27766111);
+  var myLatLng = new google.maps.LatLng(-38.01643700, 144.41694500);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">18°46'25.57"S</td>
+						<td class="ColumnValue">-38.016437</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">131°16'39.58"E</td>
+						<td class="ColumnValue">144.416945</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Locality</td>
