--- a/plc/7/8/d44bf672c68651e7294abe56887.html
+++ b/plc/7/8/d44bf672c68651e7294abe56887.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-34.64588889, 148.11398889);
+  var myLatLng = new google.maps.LatLng(52.64013200, -6.57742000);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">34°38'45.20"S</td>
+						<td class="ColumnValue">52.640132</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">148°06'50.36"E</td>
+						<td class="ColumnValue">-6.577420</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">County</td>
