--- a/plc/7/9/d546ba6942864d2208a1e35a097.html
+++ b/plc/7/9/d546ba6942864d2208a1e35a097.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-29.98178889, 151.30123889);
+  var myLatLng = new google.maps.LatLng(-31.99134400, 151.84324800);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">29°58'54.44"S</td>
+						<td class="ColumnValue">-31.991344</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">151°18'04.46"E</td>
+						<td class="ColumnValue">151.843248</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">State/ Province</td>
