--- a/plc/9/e/d43afed59233c00e9a450432ce9.html
+++ b/plc/9/e/d43afed59233c00e9a450432ce9.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-34.31133889, 138.72871944);
+  var myLatLng = new google.maps.LatLng(-34.64184500, 148.02554900);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">34°18'40.82"S</td>
+						<td class="ColumnValue">-34.641845</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">138°43'43.39"E</td>
+						<td class="ColumnValue">148.025549</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">State/ Province</td>
