--- a/plc/9/f/d45182fb0a55f5c602ed80f66f9.html
+++ b/plc/9/f/d45182fb0a55f5c602ed80f66f9.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-31.02926111, 121.20230000);
+  var myLatLng = new google.maps.LatLng(-22.71474000, 144.17886500);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">31°01'45.34"S</td>
+						<td class="ColumnValue">-22.714740</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">121°12'08.28"E</td>
+						<td class="ColumnValue">144.178865</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">State/ Province</td>
