--- a/plc/a/5/d5b6d4c26765d8a29ba2c7d865a.html
+++ b/plc/a/5/d5b6d4c26765d8a29ba2c7d865a.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(54.51360000, -1.43520000);
+  var myLatLng = new google.maps.LatLng(51.51276700, -0.14249900);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">54°30'48.96"N</td>
+						<td class="ColumnValue">51.512767</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">1°26'06.72"W</td>
+						<td class="ColumnValue">-0.142499</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Street</td>
