--- a/plc/a/b/d5fd4d03a0e78e54b74840e42ba.html
+++ b/plc/a/b/d5fd4d03a0e78e54b74840e42ba.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-30.70750000, 151.73721111);
+  var myLatLng = new google.maps.LatLng(-34.01246400, 151.10591100);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">30°42'27.00"S</td>
+						<td class="ColumnValue">-34.012464</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">151°44'13.96"E</td>
+						<td class="ColumnValue">151.105911</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">State/ Province</td>
