--- a/plc/a/e/d58cc5a6b0e9dde5e8b9994eea.html
+++ b/plc/a/e/d58cc5a6b0e9dde5e8b9994eea.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(52.18446111, -0.68758889);
+  var myLatLng = new google.maps.LatLng(53.39586400, 2.59690400);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">52°11'04.06"N</td>
+						<td class="ColumnValue">53.395864</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">0°41'15.32"W</td>
+						<td class="ColumnValue">2.596904</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">County</td>
