--- a/plc/d/1/d44ba30a3c01db4c1cd4e59361d.html
+++ b/plc/d/1/d44ba30a3c01db4c1cd4e59361d.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-34.92200000, 138.60400000);
+  var myLatLng = new google.maps.LatLng(-37.82287700, 144.99818000);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">34°55'19.20"S</td>
+						<td class="ColumnValue">-37.822877</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">138°36'14.40"E</td>
+						<td class="ColumnValue">144.998180</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">State/ Province</td>
