--- a/plc/e/6/d43b417e5e32ced7d86b984be6e.html
+++ b/plc/e/6/d43b417e5e32ced7d86b984be6e.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-35.20556944, 138.84250000);
+  var myLatLng = new google.maps.LatLng(-33.88069600, 151.08357400);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">35°12'20.05"S</td>
+						<td class="ColumnValue">-33.880696</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">138°50'33.00"E</td>
+						<td class="ColumnValue">151.083574</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">City</td>
