--- a/plc/e/e/d44de6733bd77483573d40d98ee.html
+++ b/plc/e/e/d44de6733bd77483573d40d98ee.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-33.23101111, 138.05983056);
+  var myLatLng = new google.maps.LatLng(-29.75144100, 151.73517700);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">33°13'51.64"S</td>
+						<td class="ColumnValue">-29.751441</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">138°03'35.39"E</td>
+						<td class="ColumnValue">151.735177</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">State/ Province</td>
