--- a/plc/f/3/d43b3b88f862c610bf564b09c3f.html
+++ b/plc/f/3/d43b3b88f862c610bf564b09c3f.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-34.95093056, 145.77383889);
+  var myLatLng = new google.maps.LatLng(-35.30689000, 146.26849100);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">34°57'03.35"S</td>
+						<td class="ColumnValue">-35.306890</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">145°46'25.82"E</td>
+						<td class="ColumnValue">146.268491</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">State/ Province</td>
