--- a/plc/f/7/d44b9e3590f5521a2ae43d2c97f.html
+++ b/plc/f/7/d44b9e3590f5521a2ae43d2c97f.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(60.21356111, -1.37750000);
+  var myLatLng = new google.maps.LatLng(-37.95228800, 145.01149700);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">60°12'48.82"N</td>
+						<td class="ColumnValue">-37.952288</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">1°22'39.00"W</td>
+						<td class="ColumnValue">145.011497</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Locality</td>
