--- a/plc/f/f/d44de708bef3203ef38de7bd0ff.html
+++ b/plc/f/f/d44de708bef3203ef38de7bd0ff.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-36.54041944, 143.18986111);
+  var myLatLng = new google.maps.LatLng(-34.03339100, 151.05877300);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">36°32'25.51"S</td>
+						<td class="ColumnValue">-34.033391</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">143°11'23.50"E</td>
+						<td class="ColumnValue">151.058773</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">State/ Province</td>
