--- a/plc/0/3/d43b119c0953a27124751281230.html
+++ b/plc/0/3/d43b119c0953a27124751281230.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-21.23333056, 148.96666944);
+  var myLatLng = new google.maps.LatLng(-36.97993000, 144.29138900);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">21°13'59.99"S</td>
+						<td class="ColumnValue">-36.979930</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">148°58'00.01"E</td>
+						<td class="ColumnValue">144.291389</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">State/ Province</td>
