--- a/plc/1/6/d44bb7565b7668ae5fd1aec1d61.html
+++ b/plc/1/6/d44bb7565b7668ae5fd1aec1d61.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-34.61953056, 148.79386111);
+  var myLatLng = new google.maps.LatLng(52.47480700, -8.16771600);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">34°37'10.31"S</td>
+						<td class="ColumnValue">52.474807</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">148°47'37.90"E</td>
+						<td class="ColumnValue">-8.167716</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">County</td>
