--- a/plc/2/6/d44bfefb6722db1cb38e0498062.html
+++ b/plc/2/6/d44bfefb6722db1cb38e0498062.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-35.03831944, 138.88431111);
+  var myLatLng = new google.maps.LatLng(-37.54373100, 145.05508100);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">35°02'17.95"S</td>
+						<td class="ColumnValue">-37.543731</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">138°53'03.52"E</td>
+						<td class="ColumnValue">145.055081</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">State/ Province</td>
