--- a/plc/a/b/d44b9a602703173fa472d2d8fba.html
+++ b/plc/a/b/d44b9a602703173fa472d2d8fba.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-35.32533056, 149.13713889);
+  var myLatLng = new google.maps.LatLng(-34.28077500, 146.04469400);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">35°19'31.19"S</td>
+						<td class="ColumnValue">-34.280775</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">149°08'13.70"E</td>
+						<td class="ColumnValue">146.044694</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">City</td>
