--- a/plc/d/a/d44bb7c343c2fc54741b5d4edad.html
+++ b/plc/d/a/d44bb7c343c2fc54741b5d4edad.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 
-  var myLatLng = new google.maps.LatLng(-33.55880000, 115.67320000);
+  var myLatLng = new google.maps.LatLng(-35.05684700, 148.10364500);
 
   function initialize() {
     var mapOptions = {
@@ -67,11 +67,11 @@
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Latitude</td>
-						<td class="ColumnValue">33°33'31.68"S</td>
+						<td class="ColumnValue">-35.056847</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">Longitude</td>
-						<td class="ColumnValue">115°40'23.52"E</td>
+						<td class="ColumnValue">148.103645</td>
 					</tr>
 					<tr>
 						<td class="ColumnAttribute">State/ Province</td>
